--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "require": {
     "php": ">= 5.6.0",
-    "mimmi20/wurflcache": "~1.3"
+    "mimmi20/wurflcache": "^1.7"
   },
   "require-dev": {
     "browscap/browscap-php": "dev-master",
