--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
   },
   "require-dev": {
     "browscap/browscap-php": "dev-master",
-    "phpunit/phpunit": "^5.2",
+    "phpunit/phpunit": "^5.4",
     "squizlabs/php_codesniffer": "^2.5",
-    "fabpot/php-cs-fixer": "^1.11"
+    "friendsofphp/php-cs-fixer": "^1.11"
   },
   "autoload": {
     "psr-4": {
