--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,64 @@
 language: php
+sudo: false
+dist: trusty
 
 php:
-  - 5.6
-  - 7.0
+  - 7.1
+  - 7.2
   - nightly
-  - hhvm
 
-os:
-  - linux
+os: linux
 
-before_script:
-  - if [ "`phpenv version-name`" != "hhvm" ]; then echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
-  - if [ "`phpenv version-name`" != "hhvm" ]; then echo 'opcache.enable_cli=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
-  - if [ "`phpenv version-name`" == "hhvm" ]; then echo 'opcache.enable=1' >> /etc/hhvm/php.ini; fi
-  - if [ "`phpenv version-name`" == "hhvm" ]; then echo 'opcache.enable_cli=1' >> /etc/hhvm/php.ini; fi
-  - composer self-update
-  - composer install -o --prefer-source
+env:
+  - COMPOSER_FLAGS="--prefer-lowest"
+  - COMPOSER_FLAGS=""
 
-script:
-  # xdebug is not installed on hhvm, so we are skipping the creation of code coverage data there
-  - if [ "`phpenv version-name`" == "5.6" ]; then vendor/bin/phpunit --colors --verbose --coverage-text --coverage-clover=coverage.clover; fi
-  - if [ "`phpenv version-name`" != "5.6" ]; then vendor/bin/phpunit --colors --verbose; fi
-  - vendor/bin/phpcs --standard=psr2 -np src tests
-  - vendor/bin/php-cs-fixer fix --dry-run -vv
+cache:
+  directories:
+    - $HOME/.composer/cache
 
-after_success:
-# xdebug is not installed on hhvm, so we have no code coverage data to send
-  - if [ "`phpenv version-name`" == "5.6" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-  - if [ "`phpenv version-name`" == "5.6" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
+stages:
+  - composer validate
+  - check coding style
+  - static code analysis
+
+before_install:
+  - stty cols 130
+  - phpenv config-rm xdebug.ini || echo "xdebug not available"
+  - echo 'opcache.enable=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - echo 'opcache.enable_cli=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - travis_retry composer self-update
+
+install: travis_retry composer update --optimize-autoloader --prefer-dist --prefer-stable --no-progress --no-interaction --no-suggest $COMPOSER_FLAGS -vv
+
+script: skip
+
+jobs:
+  allow_failures:
+    - php: nightly
+  include:
+    - php: nightly
+      env: COMPOSER_FLAGS="--ignore-platform-reqs"
+
+    - stage: composer validate
+      php: 7.1
+      install: skip
+      script: composer validate
+
+    - stage: check coding style
+      php: 7.1
+      env:  TEST=phpcs
+      script: vendor/bin/phpcs --colors
+
+    - stage: check coding style
+      php: 7.1
+      env: TEST=php-cs-fixer
+      script: vendor/bin/php-cs-fixer fix --dry-run -vv
+
+    - stage: static code analysis
+      php: 7.1
+      env: TEST=phpstan
+      script: vendor/bin/phpstan analyse -l 7 -c phpstan.neon --autoload-file=vendor/autoload.php --memory-limit=768M --no-progress src
 
 notifications:
   email: false
