--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     "source": "https://github.com/mimmi20/browscap-json-cache"
   },
   "require": {
-    "php": ">= 5.6.0",
+    "php": "^7.1",
     "mimmi20/wurflcache": "^1.7"
   },
   "require-dev": {
-    "browscap/browscap-php": "dev-master",
-    "phpunit/phpunit": "^5.4",
-    "squizlabs/php_codesniffer": "^2.5",
-    "friendsofphp/php-cs-fixer": "^1.11"
+    "browscap/browscap-php": "^3.1",
+    "squizlabs/php_codesniffer": "^3.2",
+    "friendsofphp/php-cs-fixer": "^2.9",
+    "phpstan/phpstan": "^0.9"
   },
   "autoload": {
     "psr-4": {
