--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,12 @@
 parameters:
+  level: max
+  paths:
+    - src
   autoload_files:
+    - %currentWorkingDirectory%/vendor/autoload.php
     - %currentWorkingDirectory%/vendor/squizlabs/php_codesniffer/autoload.php
     - %currentWorkingDirectory%/vendor/squizlabs/php_codesniffer/src/Util/Tokens.php
+  checkMissingIterableValueType: false
   excludes_analyse:
     - */tests/*/data/*
   ignoreErrors:
