--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "mimmi20/wurflcache": "^1.7.1.1"
   },
   "require-dev": {
-    "browscap/browscap-php": "^3.1.0",
+    "browscap/browscap-php": "3.x-dev as 3.2.0",
     "ergebnis/composer-normalize": "^2.2.2",
     "friendsofphp/php-cs-fixer": "^2.16.1",
     "phpstan/phpstan": "^0.12.8",
@@ -42,5 +42,20 @@
   "support": {
     "issues": "https://github.com/mimmi20/browscap-json-cache/issues",
     "source": "https://github.com/mimmi20/browscap-json-cache"
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/mimmi20/browscap-php"
+    }
+  ],
+  "minimum-stability": "stable",
+  "prefer-stable": true,
+  "config": {
+    "platform": {
+      "php": "7.1.3"
+    },
+    "preferred-install": "dist",
+    "sort-packages": true
   }
 }
